--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
 
     defaultConfig {
         applicationId "com.gswxxn.camerasnap"
-        minSdk 31
+        minSdk 28
         targetSdk 33
         versionCode 1
         versionName "1.0"
@@ -20,13 +20,6 @@ android {
             minifyEnabled true
             shrinkResources true
             zipAlignEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-        debug {
-            minifyEnabled true
-            shrinkResources true
-            zipAlignEnabled true
-            debuggable false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -42,17 +35,12 @@ android {
                 '-Xno-receiver-assertions'
         ]
     }
-    buildFeatures {
-        viewBinding true
-    }
-    lintOptions {
-        checkReleaseBuilds false
-    }
 }
 
 dependencies {
     compileOnly 'de.robv.android.xposed:api:82'
     implementation 'com.highcapable.yukihookapi:api:1.1.8'
     ksp 'com.highcapable.yukihookapi:ksp-xposed:1.1.8'
-    implementation 'org.luckypray:DexKit:1.1.3'
+    implementation 'org.luckypray:DexKit:1.1.4'
+    implementation 'androidx.annotation:annotation:1.6.0'
 }
