refactor: modify the way of calling `HandlerExecutor`

--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,5 @@ dependencyResolutionManagement {
 }
 rootProject.name = "UnlockMIUICameraSnap"
 include ':app'
+include ':api:api'
+include ':api:stub'
