--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.gswxxn.camerasnap">
 
     <application
         android:label="@string/app_name"
         android:supportsRtl="true"
-        tools:ignore="MissingApplicationIcon">
+        android:icon="@mipmap/ic_launcher">
 
         <meta-data
             android:name="xposedmodule"
