--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         applicationId "com.gswxxn.camerasnap"
         minSdk 28
         targetSdk 33
-        versionCode 1
+        versionCode 10
         versionName "1.0"
     }
 
@@ -43,4 +43,5 @@ dependencies {
     ksp 'com.highcapable.yukihookapi:ksp-xposed:1.1.8'
     implementation 'org.luckypray:DexKit:1.1.4'
     implementation 'androidx.annotation:annotation:1.6.0'
+    compileOnly project(":api:api")
 }
