--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,11 +8,21 @@ android {
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.gswxxn.camerasnap"
+        namespace 'com.gswxxn.camerasnap'
+        applicationId namespace
         minSdk 28
         targetSdk 33
         versionCode 12
         versionName "1.2"
+        //noinspection ChromeOsAbiSupport
+        ndk.abiFilters += "arm64-v8a"
+        //noinspection ChromeOsAbiSupport
+        ndk.abiFilters += "armeabi-v7a"
+        applicationVariants.configureEach { variant ->
+            variant.outputs.configureEach {
+                outputFileName = "UnlockMIUICameraSnap_" + versionName + "(" + versionCode + ").apk"
+            }
+        }
     }
 
     buildTypes {
@@ -27,6 +37,18 @@ android {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
     }
+    packagingOptions {
+        resources {
+            excludes += "/META-INF/**"
+            excludes += "/kotlin/**"
+            excludes += "/*.txt"
+            excludes += "/*.bin"
+            excludes += "/*.json"
+        }
+        dex {
+            useLegacyPackaging = true
+        }
+    }
     kotlinOptions {
         jvmTarget = '17'
         freeCompilerArgs = [
@@ -35,7 +57,6 @@ android {
                 '-Xno-receiver-assertions'
         ]
     }
-    namespace 'com.gswxxn.camerasnap'
 }
 
 dependencies {
