--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,15 +5,15 @@ plugins {
 }
 
 android {
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         namespace 'com.gswxxn.camerasnap'
         applicationId namespace
         minSdk 28
-        targetSdk 33
         versionCode 1300
         versionName "1.3"
+        targetSdk 34
         //noinspection ChromeOsAbiSupport
         ndk.abiFilters += "arm64-v8a"
         //noinspection ChromeOsAbiSupport
@@ -29,9 +29,11 @@ android {
         release {
             minifyEnabled true
             shrinkResources true
-            zipAlignEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+    buildFeatures {
+        buildConfig = true
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
@@ -61,9 +63,9 @@ android {
 
 dependencies {
     compileOnly 'de.robv.android.xposed:api:82'
-    implementation 'com.highcapable.yukihookapi:api:1.1.11'
-    ksp 'com.highcapable.yukihookapi:ksp-xposed:1.1.11'
+    implementation 'com.highcapable.yukihookapi:api:1.2.0'
+    ksp 'com.highcapable.yukihookapi:ksp-xposed:1.2.0'
     implementation 'org.luckypray:DexKit:1.1.8'
-    implementation 'androidx.annotation:annotation:1.6.0'
+    implementation 'androidx.annotation:annotation:1.7.0'
     compileOnly project(":api:api")
 }
